<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">

    <Button

        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button

        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <Button

        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_multi"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <Button

        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <Button

        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_8" />

    <Button

        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_sub"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

    <Button

        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_sum"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_del"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <Button

        android:id="@+id/key_0"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <Button

        android:id="@+id/key_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_del" />

    <Button

        android:id="@+id/key_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_sum" />

    <Button

        android:id="@+id/key_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/key_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/key_sub" />

    <Button

        android:id="@+id/key_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_multi" />

    <Button

        android:id="@+id/key_clear"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:text="@string/key_clear"
        app:layout_constraintEnd_toEndOf="@id/key_0"
        app:layout_constraintStart_toStartOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_0" />


</androidx.constraintlayout.widget.ConstraintLayout>